# daScript

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .travis.yml  ANNOTATION_INFO_REWORK.md  CHANGELIST.md  CLAUDE.md  CMakeCommon.txt  CMakeCpuDetect.txt  CMakeLists.txt  CMakePresets.json  CMakeXxdImpl.txt  COPYING  COVERAGE_GAP.md  ChangeLog  CustomRules.ruleset  FIXED_ARRAY_REWORK.md  GETTING_STARTED.md  GOALS.txt  LICENSE  Makefile.am  Makefile.in  QUOTE_LOWERING.md  README.md  THANKS  TODO.txt  a.das  aclocal.m4  appveyor.yml  autogen.sh  b.das  bootstrap  bootstrap.sh  configure  configure.ac  configure.in  context7.json  dag_uint_noise.h  dag_vecMath.h  (+54 more)
doc/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Mainpage  Mainpage.txt  Makefile.am  bootstrap.sh  configure.ac  configure.in  getting_started.md  getting_started.rst  make.bat  make_site.bat  preprocess.sh  release.sh  release.sh.in  requirements.txt  rfc3986.htm  rule_dependencies.dot  rule_dependencies.sh
doc/internal/: error_audit.csv  error_audit_design.md  error_audit_legacy_map.tsv  error_audit_recategorize.tsv  error_audit_taxonomy.md  error_audit_uniques.tsv  error_audit_verbose_gate.tsv  error_audit_wording.tsv
doc/reflections/: das2rst.das  gen_module_examples.py
doc/source/: conf.py  daslang.py  getting_started.rst  index.rst
examples/hash/: CMakeLists.txt  bench_hash_func.cpp  bench_hash_insert_only.cpp  bench_hash_map.cpp
examples/pathTracer/: CMakeLists.txt  aot.cpp  main.cpp  path_tracer.cpp  path_tracer.das  path_tracer_helper.cpp  path_tracer_helper.h  runme.bat  toy_path_tracer.das  toy_path_tracer_bgfx.das  toy_path_tracer_bgfx_hdr.das  toy_path_tracer_opengl.das  toy_path_tracer_opengl_hdr.das  toy_path_tracer_profile.das  toy_pathtracer_opengl_basic.das  toy_random.das
examples/profile/: CMakeLists.txt  aot.cpp  benchmarks.py  config.das  config.inc  main.cpp  main.das  main_aot.cpp  results_aotjit.json  results_interp.json  test_profile.cpp  test_profile.h
examples/sort/: CMakeLists.txt  bench_byte_swap.cpp  bench_sort_family.cpp  bench_stable_sort.cpp
examples/test/: CMakeLists.txt  aaa.das  agent_fork_sample.das  all_tests.das  any_alg.das  aot.cpp  aot.h  aot_1.cpp  aot_2.cpp  aot_3.cpp  aot_4.cpp  apply_example.das  apply_macro.das  apply_macro_example.das  array_reader.das  array_reader_example.das  ast_print.das  base64.das  bbb.das  bytecode.cpp  bytecode.h  ccc.das  constexpr_example.das  context_state_example.das  contracts_example.das  dasbind_example.das  debugger.das  decs_tests.das  dict_pg.das  dump_fields.das  eval_in_context.das  extra_ann.das  foo_bar.das  free_bodies.das  function_annotation_macro.das  functional.das  gc.das  gen_fields.das  generator.das  hello_world.das  (+27 more)
examples/tutorial/: CMakeLists.txt  msvc32.inc  tutorial.inc  tutorial00.cpp  tutorial00utf8.cpp  tutorial01.cpp  tutorial01.das  tutorial02.cpp  tutorial02.das  tutorial02_dasaot.cpp  tutorial02_standalone_ctx.cpp  tutorial02aot.cpp  tutorial02module.cpp  tutorial03.cpp  tutorial03.das  tutorial04.cpp  tutorial04.das  tutorial04_gen.inc  tutorial04module.das  tutorial04module.das.inc  tutorial05.cpp  tutorial05.das  tutorial06.cpp  tutorial07.c  tutorial07.das  tutorial07a.c  tutorial08.cpp  tutorial08.das  tutorial08module.das  tutorial09.cpp
modules/dasAudio/: .das_module  CMakeLists.txt  LICENSE.OPENMPT  README.md
modules/dasClangBind/: .das_module  CMakeLists.txt  README
modules/dasGlfw/: .das_module  .das_package  .gitignore  CMakeLists.txt
modules/dasGlsl/: CMakeLists.txt
modules/dasHV/: .das_module  CMakeLists.txt  scrub_clang_include.cmake
modules/dasImgui/: .das_module  .das_package  .gitignore  API_REWORK.md  CMakeLists.txt  README.md
modules/dasLLAMA/: .das_module  API_REWORK.md  CMakeLists.txt  README.md  bench_matmul.das  bench_matmul_batch.das  bench_matmul_batch_cache.das  bench_matmul_par.das  bench_matmul_real.das  dasllama_bpe.das  dasllama_bpe_test.das  dasllama_chat.das  dasllama_gguf.das  dasllama_gguf_dump.das  dasllama_gguf_perf.das  dasllama_gguf_run.das  dasllama_llama3_chat.das  dasllama_llama3_perf.das  dasllama_llama3_run.das  dasllama_math.das  dasllama_mem.das  dasllama_perf.das  dasllama_prefill_perf.das  dasllama_quant.das  dasllama_quant_eval.das  dasllama_quant_eval_q4.das  dasllama_run.das  dasllama_tokenizer.das  dasllama_transformer.das  get_x64_going.md  matmul_variants.das  test_forward.das  test_matmul.das  test_matmul_batch.das  test_matmul_par.das  test_prefill.das  test_quant.das  test_rmsnorm.das  test_rope.das  test_silu.das  (+4 more)
modules/dasLLVM/: .das_module  .gitignore  CMakeLists.txt  README  README.md  aarch64_neon.das
modules/dasLiveHost/: .das_module  CMakeLists.txt
modules/dasMinfft/: .das_module  CMakeLists.txt
modules/dasOPENAI/: .das_module  CMakeLists.txt
tests/: .das_test  CMakeLists.txt  README.md  _issue_2830_lint_repro.das  a.das  b.das  dastest_tests.das  jstest.das  samples.das  test_invariant_compound.py
tests-cpp/: CMakeLists.txt  doctest_main.cpp
tests-cpp/small/: test_allocator_iterator.cpp  test_allocator_linear_chunk.cpp  test_allocator_linear_heap.cpp  test_allocator_linear_string.cpp  test_allocator_memory_model.cpp  test_allocator_node_prefix.cpp  test_allocator_persistent_heap.cpp  test_allocator_persistent_string.cpp  test_allocator_stack.cpp  test_annotation_lifetime.cpp  test_annotation_lifetime.das  test_any_size_64bit.cpp  test_any_size_64bit.das  test_aot_int_narrowing.cpp  test_c_array_table_api.cpp  test_capi_i64.cpp  test_cfg.cpp  test_compilation_callback.cpp  test_compilation_callback_fail.das  test_compilation_callback_ok.das  test_eof_no_newline.cpp  test_file_info_line_index.cpp  test_fixed_array_interop.cpp  (+12 more)
tutorials/: CMakeLists.txt
unix/: Makefile.am  bootstrap  configure.in
web/: .gitignore  CMakeLists.txt  README.md  stage_playground_imgui_samples.cmake  step0_emsdk_install.sh  step1_emsdk_activate_linux.sh  step1_emsdk_activate_windows.sh  step23_build_debug.sh  step23_build_release.sh  step2_generate_ninja_debug.sh  step2_generate_ninja_release.sh  step3_ninja_build.sh
(+8629 files in other folders)
